# sniffdec

./: .gitignore  README.md  pyproject.toml  run.sh
sniffdec/: __main__.py  netutil.py  util.py
sniffdec/decrypter/: aes_decrypter.py  base.py
